# hazelcast-c-client

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  build.xml  hazelcast_c_client.cpp  hazelcast_c_client.h  hazelcast_c_client_test.c
doc/: links.org  map-api.org
include/: hazelcast_c_client.h
include/hazelcast_c_client/: hazelcast_c_client.h
src/: hazelcast_c_client.cpp
src/hazelcast_c_client/client/: client_c_api.cpp  client_c_api.hpp
src/hazelcast_c_client/map/: RawDataIMapImpl.hpp  map_c_api.cpp
src/hazelcast_c_client/serialization/: serialization_c_api.cpp  serialization_c_api.hpp
src/hazelcast_c_client/util/: errorhandling.cpp  errorhandling.hpp  string.cpp  string.hpp
test/: hazelcast_c_api_test.c  hazelcast_c_api_test.cpp  hazelcast_map_api_test.cpp  hazelcast_serialization_test.cpp  hazelcast_util_test.cpp
